# digitai-2025

./: .gitignore  ABOUT.md  CHANGELOG.md  DigitAI_Version_Manager_README.md  LICENSE  README.md  anotherTest.py  bruh.py  digitAI-a7.5-r1.py  digitai-p5.json  digitai-p5subset.json  digitai_version_manager.py  docker-compose.yml  historyTest2.py  historyTest4.py  historyTest5.py  historyTest8.py  information.xml  p5subset.json  p5subset.xml  p5subset_en.json  package.json  pyproject.toml  pythonTest.py  requirements.txt  setup.py  teiTester-dmJournal.xml  test.py  testingthis.py  uhhhh.py
RAG/: DigitAI_Master_Project_Documentation.md  chapterTester.xquery  digitai-RAG-cypher.cypher  digitai-RAG-data.json  digitai-p5.json  digitai-p5subset.json  digitai.schema.json  jsonInfoMap2.json
RAG-data-prep/: jsonInfoMap.json  jsonInfoMap2.json  package.json
alpha/: digitAI-a0.1-r1.py  digitAI-a1.1-r1.py  digitAI-a2.1-r1.py  digitAI-a5.1-r1.py  digitAI-a6.1-r1.py  digitAI-a6.3-r1.py  digitAI-a6.5-r1.py  digitAI-a6.8-r3.py  digitAI-a6.9.py  digitAI-a7.1-r1.py  digitAI-a7.2-r1.py  digitAI-a7.5-r1.py  digitAI-a7.6-r1.py  digitAI-a7.7-r1.py  digitAI-a7.7-r2.py
dataProcessing/: digitai-RAG-cypher.cypher
digitAICore/: embed_bge_m3.py
digitaiCore/: build_faiss_index.py  config.yaml  config_loader.py  embed_bge_m3.py  faiss_index_builder.py  localConfig.yaml  neo4j_exporter.py  rag_pipeline.py
digitai_api/: Dockerfile
digitai_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
digitai_frontend/: Dockerfile  pyproject.toml
jupyter-notebooks/: README.md  embedding.ipynb  (+1 more)
(+191 files in other folders)
