[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digitai-core"
version = "0.1.0"
description = "DigitAI Core AI Fine-tuning Framework"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "numpy~=2.3.1",
    "faiss-cpu~=1.11.0",
    "torch~=2.7.1",
    "sentence-transformers~=5.0.0",
    "neo4j~=5.28.1",
    "requests~=2.32.4",
    "PyYAML~=6.0.2",
    "scikit-learn~=1.7.0"
]